[gd_scene load_steps=28 format=2]

[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0010_05.png" type="Texture" id=1]
[ext_resource path="res://botones/boton SALIR apretado-01.png" type="Texture" id=2]
[ext_resource path="res://menu_inicio.gd" type="Script" id=3]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0009_06.png" type="Texture" id=4]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0015_FONDO-ESCENARIO.png" type="Texture" id=5]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0014_01-.png" type="Texture" id=6]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0008_07.png" type="Texture" id=7]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0013_02.png" type="Texture" id=8]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0011_04.png" type="Texture" id=9]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0007_08.png" type="Texture" id=10]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0006_09.png" type="Texture" id=11]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0003_PUBLICO-1.png" type="Texture" id=12]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0000_PUBLICO-4.png" type="Texture" id=13]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0012_03.png" type="Texture" id=14]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0004_CORTINITA-2.png" type="Texture" id=15]
[ext_resource path="res://MENU/MENU-FONDO-CORTINA-ABRE_0005_CORTINAS-1.png" type="Texture" id=16]
[ext_resource path="res://sonidos/LOOP MENU.wav" type="AudioStream" id=17]
[ext_resource path="res://sonidos/UI select.wav" type="AudioStream" id=18]
[ext_resource path="res://FONDO/titulo 1.png" type="Texture" id=19]
[ext_resource path="res://FONDO/titulo 2.png" type="Texture" id=20]
[ext_resource path="res://botones/botones_hover/boton comenzar-02.png" type="Texture" id=21]
[ext_resource path="res://botones/sboton salir-01.png" type="Texture" id=22]
[ext_resource path="res://botones/botones_hover/boton salir-02.png" type="Texture" id=23]
[ext_resource path="res://botones/boton comenzar-01.png" type="Texture" id=24]
[ext_resource path="res://botones/boton comenzar apretado-01.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 11 ), ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="HUD" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="escenario" type="Sprite" parent="CanvasLayer"]
position = Vector2( 640.5, 356.5 )
scale = Vector2( 0.655729, 0.665741 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 4.0
margin_right = -3.0
margin_bottom = 4.0
color = Color( 0, 0, 0, 0.741176 )
__meta__ = {
"_edit_lock_": true
}

[node name="fondo" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 630, 285 )
scale = Vector2( 0.670833, 0.663889 )
frames = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="cortina_abajo" type="Sprite" parent="CanvasLayer"]
position = Vector2( 635, 290 )
scale = Vector2( 0.678385, 0.703329 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="publico" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 642, 578 )
scale = Vector2( 0.665104, 0.659963 )
frames = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="cortina_Arriba" type="Sprite" parent="CanvasLayer"]
position = Vector2( 641, 48.875 )
scale = Vector2( 0.6625, 0.649281 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="titulo" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 592, 278 )
scale = Vector2( 0.541667, 0.7 )
texture = ExtResource( 19 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 645, 312 )
scale = Vector2( 0.696875, 0.681481 )
texture = ExtResource( 20 )

[node name="boton_salir" type="TextureButton" parent="CanvasLayer"]
margin_left = 494.0
margin_top = 547.0
margin_right = 814.0
margin_bottom = 633.0
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 23 )

[node name="boton_comenzar" type="TextureButton" parent="CanvasLayer"]
margin_left = 491.0
margin_top = 446.0
margin_right = 811.0
margin_bottom = 532.0
action_mode = 0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 21 )

[node name="musica_fondo_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true

[node name="iu_select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -14.857

[connection signal="animation_finished" from="CanvasLayer/fondo" to="." method="_on_fondo_animation_finished"]
[connection signal="pressed" from="CanvasLayer/boton_salir" to="." method="_on_boton_salir_pressed"]
[connection signal="pressed" from="CanvasLayer/boton_comenzar" to="." method="_on_boton_comenzar_pressed"]
